@@ -140,13 +140,13 @@ class LengowExport
         'image_product' => 'image_1',
         'image_product_2' => 'image_2',
         'image_product_3' => 'image_3',
-        'image_product_4' => 'image_4',
-        'image_product_5' => 'image_5',
-        'image_product_6' => 'image_6',
-        'image_product_7' => 'image_7',
-        'image_product_8' => 'image_8',
-        'image_product_9' => 'image_9',
-        'image_product_10' => 'image_10',
+        'image_4' => 'image_4',
+        'image_5' => 'image_5',
+        'image_6' => 'image_6',
+        'image_7' => 'image_7',
+        'image_8' => 'image_8',
+        'image_9' => 'image_9',
+        'image_10' => 'image_10',
         'reduction_from' => 'sale_from',
         'reduction_to' => 'sale_to',
         'meta_keywords' => 'meta_keywords',
